add getNodeInfosOfRecipient()
