# docs/swagger.json
@@ -1,8 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a server API for NodeList program",
+        "title": "NodeList API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8088",
+    "basePath": "/v1",
     "paths": {
         "/license/amount": {
             "get": {
@@ -140,6 +145,38 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/license/price": {
+            "get": {
+                "description": "Get license price, include how many USDT and how many ETH",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "License"
+                ],
+                "summary": "Get license price",
+                "responses": {
+                    "200": {
+                        "description": "return the price",
+                        "schema": {
+                            "$ref": "#/definitions/server.LicensePrice"
                         }
                     },
                     "500": {
@@ -335,6 +372,59 @@
                 }
             }
         },
+        "/node/info/recipient/{address}": {
+            "get": {
+                "description": "Query the nodes information list through the recipient address who receives the node reward",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Node"
+                ],
+                "summary": "Get the nodes information by the recipient",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "recipient address(an ethereum address with prefix '0x')",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "paging start index (default 0)",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "number of items to return per page(default 10)",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "return the nodes information list successfully",
+                        "schema": {
+                            "$ref": "#/definitions/server.NodeInfos"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/reward/info/{address}": {
             "get": {
                 "description": "Query all license rewards and node reward information of the specific owner, include total and withdrawed",
@@ -471,6 +561,19 @@
                     "items": {
                         "$ref": "#/definitions/server.LicenseInfo"
                     }
+                }
+            }
+        },
+        "server.LicensePrice": {
+            "type": "object",
+            "properties": {
+                "eth": {
+                    "description": "xxxETH/1License",
+                    "type": "string"
+                },
+                "usdt": {
+                    "description": "xxxUSDT/1License",
+                    "type": "string"
                 }
             }
         },
